--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 html, body {
 	/*background-color: #f8f8ff;*/
 	color: black;
-	font-family: Arial Black, Helvetica, sans-serif;
+	/*font-family: Arial Black, Helvetica, sans-serif;*/
 }
 
 title {
